--- a/styles.css
+++ b/styles.css
@@ -14,7 +14,7 @@
     background-color: black;
 }
 .home-page{
-  background-image: url(images/Dark\ Modern\ Photo\ Mountain\ And\ Sky\ Desktop\ Wallpaper_20240527_122953_0000.png);
+  background-image: url(images/);
   background-repeat: no-repeat;
   background-position: center;
   background-size: auto;
